<resources>
    <!--app name-->
    <string name="app_name">hsb_pepper</string>

    <!-- fragment_loading -->
    <string name="loading">Loading</string>

    <!-- fragment_main -->
    <string name="isMainFragment">This is the main fragment</string>
    <string name="reset">\"Reset\"</string>
    <string name="fragmentTwo">\"Fragment Two\"</string>
    <string name="fragmentOne">\"Fragment One\"</string>

    <!-- fragment_one -->
    <string name="isFragmentOne">This is the fragment One</string>
    <string name="saySomething">\"Say something\"</string>

    <!-- fragment_two -->
    <string name="isFragmentTwo">This is the fragment Two</string>
    <string name="variableSetTo">The QiVariable is set to : </string>
    <string name="placeholder">Placeholder</string>
    <string name="setToA">Set to \"Pepper\"</string>
    <string name="setToB">Set to \"Nao\"</string>
    <string name="pepper">Pepper</string>
    <string name="nao">Nao</string>

</resources>