<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/two_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/isFragmentTwo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/two_qi_variable_is"
        app:layout_constraintBottom_toTopOf="@id/two_qi_variable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/variableSetTo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/two_qi_variable"
        app:layout_constraintTop_toBottomOf="@id/two_text"
        app:layout_constraintBottom_toTopOf="@id/two_button_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/placeholder"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/two_button_set_A"
        app:layout_constraintTop_toBottomOf="@id/two_qi_variable"
        app:layout_constraintStart_toStartOf="@id/two_qi_variable_is"
        android:text="@string/setToA"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/two_button_set_B"
        app:layout_constraintTop_toBottomOf="@id/two_qi_variable"
        app:layout_constraintEnd_toEndOf="@id/two_qi_variable_is"
        android:text="@string/setToB"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/two_button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/two_button_frag_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fragmentOne"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>